--- a/CRUDExample/CRUDExample.csproj
+++ b/CRUDExample/CRUDExample.csproj
@@ -28,6 +28,7 @@
 
  <ItemGroup>
   <ProjectReference Include="..\Entities\Entities.csproj" />
+  <ProjectReference Include="..\Exception\Exceptions.csproj" />
   <ProjectReference Include="..\Repositories\Repositories.csproj" />
   <ProjectReference Include="..\RepositoryContracts\RepositoryContracts.csproj" />
   <ProjectReference Include="..\ServiceContracts\ServiceContracts.csproj" />
